# Merlina

./: .dockerignore  .env.example  .gitignore  API.md  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.hfjobs  Makefile  README.md  STRESS_TEST_FINDINGS.md  bump_version.py  config.py  docker-compose.yml  mcp_server.py  merlina.py  merlina_cli.py  pyproject.toml  pytest.ini  requirements.txt  version.py
.github/: WORKFLOWS_GUIDE.md
.github/workflows/: README.md  docker.yml  frontend-tests.yml  publish.yml  quick-test.yml  tests.yml
.ipynb_checkpoints/: CURRENT_FILES_EXPLAINED-checkpoint.md  README-checkpoint.md
data/: test_jobs.db
dataset_handlers/: __init__.py  base.py  deduplication.py  factory.py  formatters.py  loaders.py  messages_converter.py  validators.py
docs/: ORPO_MIGRATION_GUIDE.md  ORPO_QUICK_REFERENCE.md  ORPO_STANDALONE_SUMMARY.md  README.md  data-editor-frontend-plan.md  data-editor-implementation-status.md
docs/dev/: dataset-implementation.md  implementation-notes.md  preview-feature.md  tokenizer-implementation.md
docs/user/: CONFIG_MANAGEMENT.md  cookbook.md  dataset-guide.md  mcp.md  new-features.md  quick-start.md  remote-training.md  runpod.md  tokenizer-format.md
examples/: README.md  basic-training.json  custom-format.json  example_messages_format.py  example_messages_format_with_toggle.py  huggingface-dataset.json  job_history.py  local-dataset.json  manage_configs.py  tokenizer-format.json  validate_and_train.py  websocket_monitor.py
examples/datasets/: sample-dpo-dataset.json
frontend/: BACKEND_INTEGRATION.md  IMPROVEMENTS.md  QUICK_START.md  README-v2.md  data-editor-mockup.html  diffusion.html  index.html  script.js  styles.css
frontend/.ipynb_checkpoints/: index-checkpoint.html
frontend/css/: animations.css  base.css  components.css  layout.css  utilities.css  variables.css
frontend/data-editor/: index.html
frontend/js/: api.js  app-v2.js  app.js  config.js  dataset.js  diffusion.js  disk.js  export.js  form_config.js  gpu.js  inference.js  jobs.js  miracle.js  model.js  theme.js  ui.js  validation.js
frontend/styles/: 00-variables.css  01-reset.css  02-base.css  03-layout.css  04-components.css  05-dashboard.css  06-forms.css  07-job-cards.css  main.css
notebooks/: Merlina_Colab.ipynb
scripts/: build_hfjobs_image.sh  cleanup_checkpoints.py  generate_diffusion_samples.py  hf_jobs_entrypoint.sh  remote_worker_bootstrap.sh  runpod_setup.sh
src/: __init__.py  artemis_vlm.py  atelier_training_runner.py  config_image.py  config_manager.py  constants.py  disk_manager.py  exceptions.py  gguf_exporter.py  gpu_utils.py  hf_jobs_runner.py  job_manager.py  job_queue.py  llama_cpp_resolver.py  llama_server.py  local_models.py  memory_guard.py  merge_artifact.py  model_artifacts.py  model_card.py  muon_support.py  orpo_standalone.py  preflight_checks.py  presets.py  reward_functions.py  train_single.py  train_worker.py  training_runner.py  training_runner_diffusion.py  training_runner_vlm.py  upload_state.py  utils.py  websocket_manager.py
src/data_editor/: __init__.py  import_engine.py  session_manager.py  transformations.py  validation.py
src/remote/: __init__.py  artifacts.py  orchestrator.py  plan.py  sizing.py  spec.py  worker_client.py  worker_entry.py
tests/: README.md  TEST_SUMMARY.md  conftest.py  requirements-test.txt  test_api_comprehensive.py  test_api_endpoints.py  test_artemis_collator.py  test_artemis_processor.py  test_artemis_runner.py  test_artemis_stage_gen.py  test_artemis_vlm.py  test_attention_settings.py  test_build_grimoire_config.py  test_centralized_config_save.py  test_chat_template_embedding.py  test_cleanup.py  test_config_field_names.py  test_config_image.py  test_config_manager.py  test_config_only.py  test_dataset_config_name.py  test_dataset_loaders.py  test_deduplication.py  test_diffusion_dispatch.py  test_disk_manager.py  test_event_loop_blocking.py  test_frontend_wb_changes.py  test_gguf_exporter.py  test_hf_hub_private.py  test_hf_hub_private_simple.py  test_job_deletion.py  test_llama_cpp_resolver.py  test_local_models.py  test_mcp_server.py  test_memory_guard.py  test_merge_artifact.py  test_messages_format.py  test_messages_format_toggle.py  test_model_artifacts.py  test_model_loading_integration.py  (+28 more)
tests/fixtures/: test_dataset.json  test_dataset_additional.json  test_dataset_different_columns.json  test_messages_dataset.json
tests/frontend/: playwright.config.mjs  serve_for_tests.py  test_api.mjs  test_form_config.mjs  test_integration.spec.mjs  test_theme.mjs  test_ui.mjs  test_validation.mjs
wandb/: latest-run
(+19 files in other folders)
